--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/rhip.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/rhip.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="">
+<html lang="es" data-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -46,8 +46,6 @@
             background-color: var(--bg-color);
         }
 
-        /* Estilo del botón de cambio de tema */
-        .theme-toggle {
             position: fixed;
             top: 1.5rem;
             right: 1.5rem;
@@ -64,14 +62,6 @@
             align-items: center;
             justify-content: center;
         }
-        @media (max-width: 767px) {
-            .theme-toggle {
-                top: 4rem;
-                right: 1rem;
-                width: 32px;
-                height: 32px;
-                font-size: 1rem;
-            }
         }
 
         /* Ajustes para el menú desplegable */
@@ -161,10 +151,6 @@
             margin-top: 0.5rem;
             text-align: center;
         }
-        @media (max-width: 767px) {
-            .image-container {
-                justify-content: center !important;
-            }
             .image-container figure {
                 max-width: 100%;
             }
@@ -320,41 +306,7 @@
 <!-- Bootstrap core JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- SCRIPT PARA MODO OSCURO -->
-<script>
-    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    const userTheme = localStorage.getItem('theme');
-    if (userTheme) {
-        document.documentElement.setAttribute('data-theme', userTheme);
-    } else if (prefersDark) {
-        document.documentElement.setAttribute('data-theme', 'dark');
-    }
-    function toggleTheme() {
-        const currentTheme = document.documentElement.getAttribute('data-theme');
-        const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-        document.documentElement.setAttribute('data-theme', newTheme);
-        localStorage.setItem('theme', newTheme);
-        updateIcon(newTheme);
-    }
-    function updateIcon(theme) {
-        const icon = document.getElementById('theme-icon');
-        if (!icon) return;
-        icon.textContent = theme === 'dark' ? '☀️' : '🌙';
-    }
-    document.addEventListener('DOMContentLoaded', () => {
-        const button = document.getElementById('theme-toggle');
-        if (button) {
-            button.addEventListener('click', toggleTheme);
-            const current = document.documentElement.getAttribute('data-theme') || 'light';
-            updateIcon(current);
-        }
-    });
-</script>
 
-<!-- BOTÓN DE TEMA -->
-<button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
-    <span id="theme-icon">🌙</span>
-</button>
 
 </body>
 </html>
