--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -164,7 +164,7 @@
                 <div class="col-lg-11 col-xl-9 col-xxl-8">
                    <!-- About Me Section -->
 <section>
-    <h2 class="text-primary fw-bolder mb-4">Un poco sobre mí :)</h2>
+    <h2 class="text-primary fw-bolder mb-4">Un poco sobre mí</h2>
     <div class="card shadow border-0 rounded-4 mb-5">
         <div class="card-body p-5">
         <div>Nací en España, pero crecí en Colombia, donde aprendí a mirar el mundo con ojos curiosos y donde la sensibilidad y la resiliencia se convirtieron en mis mayores acompañantes vitales. Desde muy joven encontré en el lenguaje una forma de entender la realidad y, sobre todo, de transformarla; son mis matemáticas. Por eso escribo: para pensar, para cuestionar y, a veces, para crear un poco de belleza. Me apasiona la relación entre cultura, sociedad y lenguaje, y he orientado mi formación y experiencia hacia el periodismo, la escritura crítica y la comunicación con conciencia, colectiva y, sobre todo, empática.</div>
